--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,6 @@
 .container {
-  text-align: center;
-  background-color: red;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  height: 100%;
 }
